fix(board) : validateImageKyes 조건 수정